--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -17,6 +17,9 @@ if (TARGET benchmark::benchmark)
   add_executable(bench_dom_api bench_dom_api.cpp)
   if(SIMDJSON_EXCEPTIONS)
     add_executable(bench_ondemand bench_ondemand.cpp)
+    if(TARGET lite3)
+      target_link_libraries(bench_ondemand PRIVATE lite3)
+    endif()
     if(TARGET yyjson)
       target_link_libraries(bench_ondemand PRIVATE yyjson)
     endif()
